--- a/devapp-client-master-1.4/public/login.html
+++ b/devapp-client-master-1.4/public/login.html
@@ -2,12 +2,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
     <script src="https://kit.fontawesome.com/f04cea4735.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/login.css">
-    <title>Document</title>
+    <title>하이퍼레저 로그인</title>
 </head>
 
 <body>
