--- a/devapp-client-master-1.4/public/login.html
+++ b/devapp-client-master-1.4/public/login.html
@@ -8,13 +8,14 @@
     <script src="https://kit.fontawesome.com/f04cea4735.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/login.css">
     <title>하이퍼레저 로그인</title>
+    <script src="js/mobile.js" defer></script>
 </head>
 
 <body>
     <div class="container">
         <div class="wrap">
             <div class="logo"></div>
-            <p class="login-page">Login Page</p>
+            <p class="login-page"></p>
             <div class="pannel">
                 <p class="login">로그인</p>
                 <form action="/login" method="post">
@@ -25,6 +26,9 @@
                     </ul>
                 </form>
             </div>
+        </div>
+        <div id=error>
+         
         </div>
     </div>
     <footer>
